src/objects/Asset_Requested__c.object
<CustomObject>
    <description>This Object is used to store Asset Request Data</description>
    <fields>
        <fullName>Asset_Category__c</fullName>
        <description>This field is to store record type submitted by Asset Request field Asset Type</description>
        <inlineHelpText>It Shows Asset Category</inlineHelpText>
        <label>Asset Category</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asset_Type__c</fullName>
        <description>This field is to store the value of &apos;Asset Type&apos; of the VF page Asset Type</description>
        <inlineHelpText>It shows Asset Type</inlineHelpText>
        <label>Asset Type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>This field is to Store Description from Asset Request Page</description>
        <inlineHelpText>It Shows Asset Description</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <description>This field is to store Quantity submitted by Asset Request page</description>
        <inlineHelpText>It Shows Quantity</inlineHelpText>
        <label>Quantity</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Request_Date__c</fullName>
        <description>This field is to store Date for Asset Request</description>
        <inlineHelpText>It Shows Request Date</inlineHelpText>
        <label>Request Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Request_Name__c</fullName>
        <description>This field is to Store of the Subject of request</description>
        <inlineHelpText>It Shows Asset Request Name</inlineHelpText>
        <label>Request Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Status__c</fullName>
        <description>This field is to store request status</description>
        <inlineHelpText>It Shows Asset Request Status</inlineHelpText>
        <label>Request Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Implemented</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Request_Type__c</fullName>
        <description>This picklist is to store &apos;Type of Request&apos; field from Asset Request VF Page</description>
        <inlineHelpText>It Shows Request Type</inlineHelpText>
        <label>Request Type</label>
        <picklist>
            <picklistValues>
                <fullName>Purchase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Allocation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service/Repair</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Asset Requested</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AR-{0000}</displayFormat>
        <label>Asset Requested Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Asset Requested</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>